manifests/tenants/cyphria/insights_api/network-policy/ingress-from-frontend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cyphria-insights-api-from-frontend-access
  namespace: cyphria-backend
  annotations:
    kubernetes.io/description: allows frontend to send requests to the insights api to display data
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: cyphria-backend
  ingress:
    # insights api <- frontend
    - toPorts:
        - ports:
            - port: 8000
              protocol: TCP
